# Version 0.7

* Added has_scope to controller (an interface for named_scopes).
* Added polymorphic_belongs_to, optional_belongs_to and singleton_belongs_to
  as quick methods.
* Only load belongs_to, singleton and polymorphic helpers if they are actually
  required. base_helpers, class_methods, dumb_responder and url_helpers are loaded
  when you inherited from base for the first time.

# Version 0.6

* Ensure that the default template is not rendered if the default_template_format
  is not accepted. This is somehow related with the security breach report:

  http://www.rorsecurity.info/journal/2009/4/24/hidden-actions-render-templates.html

  IR forbids based on mime types. For example: respond_to :html, :except => :index
  ensures that the index.html.erb view is not rendered, making your IR controllers
  safer.

* Fixed a bug that happens only when format.xml is given to blocks and then it
  acts as default, instead of format.html.
* Fixed a strange bug where when you have create.html.erb or update.html.erb,
  it makes IE6 and IE7 return unprocessable entity (because they send Mime::ALL).
* Stop rescueing any error when constantizing the resource class and allow
  route_prefix to be nil.
* Cleaned up tests and responder structure. Whenever you pass a block to aliases
  and this block responds to the request, the other blocks are not parsed improving performance.
* [BACKWARDS INCOMPATIBLE] By default, Inherited Resources respond only :html requests.
* Added a quick way to overwrite the redirect to url in :create, :update and :destroy.

# Version 0.5

* Decoupled routes name from :instance_name and :collection_name. This way we
  have more flexibility. Use route_instance_name and route_collection_name to
  to change routes.
* Avoid calling human_name on nil when a resource class is not defined.
* Only call I18n if it's defined.

# Version 0.4

* Dealing with namespaced controllers out of the box.
* Added support to namespaced routes through :route_prefix.